...
        field.setContentCompressionResistancePriority(.defaultLow, for: .horizontal)
        context.coordinator.field = field

        let toolbar = UIToolbar()
        toolbar.items = [
            UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil),
            UIBarButtonItem(title: "입력 완료", style: .done, target: context.coordinator,
                            action: #selector(Coordinator.done))
        ]
        toolbar.sizeToFit()
        field.inputAccessoryView = toolbar
        return field
    }
...
