...
    case dropped
    case nextCours

    var label: String {
        switch self {
        case .wait: return "대기중"
        case .play: return "진행중"
        case .done: return "완료"
        case .dropped: return "중단"
        case .nextCours: return "다음 시즌 대기"
        }
    }
}

enum ItemUnit: String, Codable, Hashable {
    case ep
...
